# lib-fits

./: .gitmodules  README.md
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  async_read.cpp  main.cpp
experiment/: CMakeLists.txt  main.cpp
experiment/cfitsio/: CMakeLists.txt  main.cpp
experiment/lib_fits/: CMakeLists.txt  main.cpp
lib/ifits/include/: ifits.hpp  pch.hpp
lib/ifits/include/details/: search.hpp
lib/ofits/include/: ofits.hpp  pch.hpp
lib/tests/: test_ifits.cpp  test_ofits.cpp
lib_fits/: CMakeLists.txt  Doxyfile
lib_fits/cmake/: lib_fitsConfig.cmake.in
lib_fits/examples/: CMakeLists.txt  main.cpp
lib_fits/include/: lib_fits.hpp
lib_fits/include/lib_fits/: ifits.hpp  ofits.hpp
lib_fits/include/lib_fits/details/: search.hpp
lib_fits/tests/: CMakeLists.txt  test_ifits.cpp  test_ofits.cpp
lib_fits/tests/data/: double_hdu.fits  double_hdu_data.fits  double_hdu_read.fits  example.fits
